traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:7: error: not found: value getPos
      getPos(i,y)
      ^